--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Arsenal Mod</string>
     <string name="action_settings">Settings</string>
-    <string name="scan_button_text">Scan</string>
+    <string name="start_scan_button_text">Scan</string>
     <string name="scan_title_text">Devices Found</string>
+    <string name="stop_scan_button_text">Stop</string>
 </resources>
