--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="start_scan_button_text">Scan</string>
     <string name="scan_title_text">Devices Found</string>
     <string name="stop_scan_button_text">Stop</string>
+    <string name="title_activity_connected_device">ConnectedDevice</string>
 </resources>
